Fixed bugs on mobile UI

--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,16 @@ input[type="checkbox"] {
 }
 
 input[type="file"] {
-    display: none;
+	display: none;
 }
 
 label {
-    vertical-align: middle;
+	vertical-align: middle;
 	margin: 15px;
+}
+
+button:focus {
+	outline: none;
 }
 
 .row-no-margin {
@@ -88,7 +92,7 @@ label {
 
 #main {
 	overflow: auto;
-	transition: margin-left .5s;	
+	transition: margin-left .5s;
 }
 
 /*
@@ -319,6 +323,8 @@ dialog {
 	right: 0px;
 	z-index: 2;
 	cursor: pointer;
+	border: none;
+	background: none;
 }
 
 .operation-status-icon span {
@@ -352,7 +358,7 @@ dialog {
 
 .blur:hover {
 	color: transparent;
-   	text-shadow: 0 0 2px rgba(0,0,0,0.7);
+	text-shadow: 0 0 2px rgba(0, 0, 0, 0.7);
 }
 
 .psticky {
@@ -362,15 +368,16 @@ dialog {
 .button__badge {
 	border-radius: 2px;
 	color: white;
-   
+
 	padding: 1px 3px;
 	font-size: 10px;
-	
-	position: absolute; /* Position the badge within the relatively positioned button */
+
+	position: absolute;
+	/* Position the badge within the relatively positioned button */
 	top: 0;
 	right: 0;
 	margin-top: 10px;
-  }
+}
 
 @media screen and (max-width: 768px) {
 
@@ -436,6 +443,7 @@ dialog {
 
 .tile-description {
 	text-align: center;
+	word-wrap: break-word;
 }
 
 .read-more-nft {
@@ -472,7 +480,7 @@ dialog {
 		margin: 5px;
 	}
 
-	.tile > * {
+	.tile>* {
 		-webkit-transform: scale(0.75) !important;
 		transform: scale(0.75) !important;
 	}
@@ -491,7 +499,8 @@ dialog {
 	box-shadow: 0 5px 30px 0 rgb(0 0 0 / 10%);
 	border-radius: 20px;
 	border: 0;
-	width: 350px; /* https://docs.opensea.io/docs/metadata-standards */
+	width: 350px;
+	/* https://docs.opensea.io/docs/metadata-standards */
 	height: 350px;
 	margin: 20px;
 	object-fit: fill;
@@ -507,91 +516,101 @@ dialog {
 	Slider CSS
 */
 
-* {box-sizing:border-box;}
+* {
+	box-sizing: border-box;
+}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
 }
 
 /* Hide the images by default */
 .mySlides {
-  display: none;
+	display: none;
 }
 
 /* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+.prev,
+.next {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: -22px;
+	padding: 16px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
 }
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+	right: 0;
+	border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+	background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
+.active,
+.dot:hover {
+	background-color: #dfeaf3;
 }
 
 /* Fading animation */
 .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+	from {
+		opacity: .4
+	}
+
+	to {
+		opacity: 1
+	}
 }
 
 /*
@@ -617,6 +636,39 @@ dialog {
 	End App CSS
 */
 
+/*
+	Tooltip CSS
+*/
+
+.tooltip {
+	position: relative;
+	display: inline-block;
+	border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+	visibility: hidden;
+	width: 120px;
+	background-color: rgb(76, 49, 49);
+	color: #8e4343;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+
+	/* Position the tooltip */
+	position: absolute;
+	z-index: 2;
+	top: -5px;
+	left: 105%;
+}
+
+.tooltip:hover .tooltiptext {
+	visibility: visible;
+}
+
+/*
+	End Tooltip CSS
+*/
 
 
 .hidden {
@@ -640,7 +692,7 @@ dialog {
 }
 
 .main-color {
-	color: var(--main-bg-color) !important; 
+	color: var(--main-bg-color) !important;
 }
 
 .navbar {
@@ -958,7 +1010,7 @@ dialog {
 	padding: 10px 40px;
 	border: 2px solid var(--main-bg-color);
 	border-radius: 7px;
-	margin-top:10px;
+	margin-top: 10px;
 	margin-bottom: 20px;
 	display: inline-block;
 	max-width: 300px;
@@ -1192,6 +1244,7 @@ dialog {
 	border: 1px solid #e4e4e4;
 	text-align: center;
 	margin: 5px;
+	width: auto;
 }
 
 input {
@@ -1349,11 +1402,15 @@ input {
 	.form-input {
 		-webkit-transform: scale(0.75) !important;
 		transform: scale(0.75) !important;
+		width: auto;
 	}
 
 	.card-icon {
 		-webkit-transform: scale(0.65) !important;
 		transform: scale(0.65) !important;
+		width: 80%;
+		margin: 10px;
+		height: auto;
 	}
 
 	.header-padding {
@@ -1389,7 +1446,7 @@ input {
 	}
 
 	.title {
-		margin-top: 100px;
+		margin-top: 15%;
 	}
 
 	#main-frame {
